Added herp image

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <header>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
 </header>
 <body>
-    <div class = navigation>
+    <div class="navigation">
         <nav>
             <h2>Home</h2>
             <h2>About</h2>
@@ -13,12 +13,14 @@
         </nav>
     </div>
 
-    <section class = titleBanner>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg" />
-        <h1>Welcome to EmpaMAMA's House</h1>
+    <section class="heroBanner">
+        <div class="heroBackground">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg" />
+            <h1>Welcome to EmpaMAMA's House</h1>
+        </div>
     </section>
 
-    <section class = aboutSection>
+    <section class="aboutSection">
         <h2>The Story of a Mama and her Empanadas</h2>
         <p>Spicy jalapeno bacon ipsum dolor amet irure do beef magna nostrud meatball leberkas meatloaf mollit. Veniam tri-tip tail lorem culpa. Minim anim ullamco cupidatat in lorem beef tri-tip burgdoggen boudin chuck aliqua corned beef. Do sirloin doner swine, dolore strip steak capicola cupidatat.</p>
     </section>
