Added hero image and sized

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </div>
 
     <section class="heroBanner">
-        <div class="heroBackground">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Empanadas_argentinas_2017.jpg" />
-            <h1>Welcome to EmpaMAMA's House</h1>
+        <div class="heroImage">
+            <div class="heroText">
+                <h1>Welcome to EmpaMAMA's House</h1>
+            </div>
         </div>
     </section>
 
