Added text positioning for hero image

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     </section>
 
     <section class="aboutSection">
-        <h2>The Story of a Mama and her Empanadas</h2>
-        <p>Spicy jalapeno bacon ipsum dolor amet irure do beef magna nostrud meatball leberkas meatloaf mollit. Veniam tri-tip tail lorem culpa. Minim anim ullamco cupidatat in lorem beef tri-tip burgdoggen boudin chuck aliqua corned beef. Do sirloin doner swine, dolore strip steak capicola cupidatat.</p>
+        <div class="aboutImageContainer">
+        </div>
+        <div class="aboutTextContainer">
+            <h2>The Story of a Mama and her Empanadas</h2>
+            <p>Spicy jalapeno bacon ipsum dolor amet irure do beef magna nostrud meatball leberkas meatloaf mollit. Veniam tri-tip tail lorem culpa. Minim anim ullamco cupidatat in lorem beef tri-tip burgdoggen boudin chuck aliqua corned beef. Do sirloin doner swine, dolore strip steak capicola cupidatat.</p>
+        </div>
     </section>
 
 </body>
