Added about section elements

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <section class="aboutSection">
         <div class="aboutImageContainer">
+            <img src="Images/69218218_333735220842022_1305873931491606528_n.jpg" >
         </div>
         <div class="aboutTextContainer">
             <h2>The Story of a Mama and her Empanadas</h2>
