Nav bar resizing

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <div class="navigation">
         <nav>
             <h2>Home</h2>
+            <h2>|</h2>
             <h2>About</h2>
+            <h2>|</h2>
             <h2>Menu</h2>
+            <h2>|</h2>
             <h2>Contact</h2>
         </nav>
     </div>
@@ -23,7 +26,7 @@
 
     <section class="aboutSection">
         <div class="aboutImageContainer">
-            <img src="Images/69218218_333735220842022_1305873931491606528_n.jpg" >
+            <img class="momImg" src="Images/69218218_333735220842022_1305873931491606528_n.jpg" >
         </div>
         <div class="aboutTextContainer">
             <h2>The Story of a Mama and her Empanadas</h2>
