About section placement and resizing

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <div class="navigation">
         <nav>
             <h2>Home</h2>
-            <h2>|</h2>
             <h2>About</h2>
-            <h2>|</h2>
             <h2>Menu</h2>
-            <h2>|</h2>
             <h2>Contact</h2>
         </nav>
     </div>
@@ -19,7 +16,7 @@
     <section class="heroBanner">
         <div class="heroImage">
             <div class="heroText">
-                <h1>Welcome to EmpaMAMA's House</h1>
+                <h1>Welcome to EmpaMAMA's</h1>
             </div>
         </div>
     </section>
@@ -29,8 +26,10 @@
             <img class="momImg" src="Images/69218218_333735220842022_1305873931491606528_n.jpg" >
         </div>
         <div class="aboutTextContainer">
-            <h2>The Story of a Mama and her Empanadas</h2>
-            <p>Spicy jalapeno bacon ipsum dolor amet irure do beef magna nostrud meatball leberkas meatloaf mollit. Veniam tri-tip tail lorem culpa. Minim anim ullamco cupidatat in lorem beef tri-tip burgdoggen boudin chuck aliqua corned beef. Do sirloin doner swine, dolore strip steak capicola cupidatat.</p>
+            <div class="actualAboutText">
+                <h2>The Story of a Mama and her Empanadas</h2>
+                <p>Spicy jalapeno bacon ipsum dolor amet irure do beef magna nostrud meatball leberkas meatloaf mollit. Veniam tri-tip tail lorem culpa. Minim anim ullamco cupidatat in lorem beef tri-tip burgdoggen boudin chuck aliqua corned beef. Do sirloin doner swine, dolore strip steak capicola cupidatat.</p>
+            </div>
         </div>
     </section>
 
