Changed colors around

--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
         </div>
     </section>
 
+    <section class="menuSection">
+        <h2>Mama's Menu</h2>
+        <div class="menuItem1">
+            <h3>Empanadas</h3>
+        </div>
+        <div class="menuItem2">
+            <h3>Lumpia</h3>
+        </div>
+        <div class="menuItem3">
+            <h3>Longganisa</h3>
+        </div>
+    </section>
+
     <section class="aboutSection">
         <div class="aboutImageContainer">
             <img class="momImg" src="Images/69218218_333735220842022_1305873931491606528_n.jpg" >
@@ -34,7 +47,7 @@
     </section>
 
     <section class="footer">
-        <h2>Contact</h2>
+        <h2>Contact Mama</h2>
     </section>
 
 </body>
